# Multiplayer_game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_mac.sh  build_windows.ps1
.github/workflows/: build.yml  test-script-build-windows.yml
client/: CMakeLists.txt
client/sources/: main.cpp
server/: CMakeLists.txt
